Fix handshift annotation visibility

--- a/assets/scss/partials/_annotations.scss
+++ b/assets/scss/partials/_annotations.scss
@@ -57,7 +57,7 @@
 
 
   &.annotation-handshift::before {
-    left: -25px;
+    left: 25px;
     height: 100%;
     width: 8px;
     position: absolute;
